--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+quarkus.package.type=uber-jar
 quarkus.datasource.db-kind=mysql
 quarkus.datasource.username=${MYSQL_USER}
 quarkus.datasource.password=${MYSQL_PASSWORD}
