Change service name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ quarkus.package.type=uber-jar
 quarkus.datasource.db-kind=mysql
 quarkus.datasource.username=${MYSQL_USER}
 quarkus.datasource.password=${MYSQL_PASSWORD}
-quarkus.datasource.jdbc.url=jdbc:mysql://quantumx:3306/quantumxdb
+quarkus.datasource.jdbc.url=jdbc:mysql://quantumxdb:3306/quantumxdb
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.sql-load-script=import.sql
 quarkus.hibernate-orm.log.sql=true
