--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 quarkus.package.type=uber-jar
-quarkus.datasource.db-kind=mysql
-quarkus.datasource.username=${MYSQL_USER}
-quarkus.datasource.password=${MYSQL_PASSWORD}
-quarkus.datasource.jdbc.url=jdbc:mysql://quantumxdb:3306/quantumxdb
+quarkus.datasource.db-kind=postgresql
+quarkus.hibernate-orm.dialect=org.hibernate.dialect.PostgreSQLDialect
+quarkus.datasource.username=quantum_user
+quarkus.datasource.password=quantum_pass
+quarkus.datasource.jdbc.url=jdbc:postgresql://quantumxdb:5432/quantumxdb
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.sql-load-script=import.sql
 quarkus.hibernate-orm.log.sql=true
